--- a/index.html
+++ b/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script src="script.js" defer></script>
-    <title>Home</title>
-</head>
-<body>
-    <main>
-        <div class="clock"></div>
-        <div class="date"></div>
-        <form action="">
-            <div class="form-block">
-                <input type="search" name="query" id="query">
-                <input type="submit" id="submit" title="Search" class="button button-icon" value="🔍">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <script src="script.js" defer></script>
+        <title>Home</title>
+    </head>
+    <body>
+        <main>
+            <div class="date-and-time">
+                <div class="clock"></div>
+                <div class="date"></div>
             </div>
-            <div class="form-block">
-                <select name="searchEngine" id="searchEngine" title="Select Search Engine">
-                    <option value="https://www.google.com/search?q=" selected>Google</option>
-                    <option value="https://www.startpage.com/sp/search?query=">Startpage</option>
-                </select>
-            </div>
-        </form>
-        <div class="console-like"></div>
-    </main>
-</body>
+            <form action="">
+                <div class="form-block search-bar">
+                    <input
+                        type="search"
+                        name="query"
+                        id="query"
+                        class="search-bar-input"
+                        placeholder="Search..."
+                        autocomplete="off"
+                    />
+                    <input
+                        type="submit"
+                        id="search"
+                        title="Search"
+                        class="button button-icon search-bar-button"
+                        value="🔍"
+                    />
+                </div>
+                <div class="form-block">
+                    <select
+                        name="searchEngine"
+                        id="searchEngine"
+                        class="search-engine"
+                        title="Select Search Engine"
+                    >
+                        <option
+                            value="https://www.google.com/search?q="
+                            selected
+                        >
+                            Google
+                        </option>
+                        <option
+                            value="https://www.startpage.com/sp/search?query="
+                        >
+                            Startpage
+                        </option>
+                    </select>
+                </div>
+            </form>
+            <div class="console-like"></div>
+        </main>
+    </body>
 </html>
