style: :art: Added default text for noscript

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
         <main>
             <div class="date-and-time">
-                <div class="clock"></div>
-                <div class="date"></div>
+                <div class="clock">right now</div>
+                <div class="date">it's today. look at a calendar</div>
             </div>
             <form action="">
                 <div class="form-block search-bar">
@@ -55,7 +55,6 @@
                     </select>
                 </div>
             </form>
-            <div class="console-like"></div>
         </main>
     </body>
 </html>
