♿️ added html autofocus to search bar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         class="search-bar-input"
                         placeholder="Search..."
                         autocomplete="off"
+                        autofocus
                     />
                     <input
                         type="submit"
