added focussing label in the background

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             </div>
             <form action="">
                 <div class="form-block search-bar">
+                    <label for="query" id="query-label"></label>
+
                     <input
                         type="search"
                         name="query"
