--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         id="query"
                         class="search-bar-input"
                         placeholder="Search..."
+                        title="Search with your selected search engine" 
                         autocomplete="off"
                         autofocus
                     />
@@ -36,6 +37,12 @@
                         class="button button-icon search-bar-button"
                         value="🔍"
                     />
+                    <a 
+                        href="newtab.html"
+                        target="_blank"
+                        rel="noreferrer" 
+                        title="New Tab" 
+                        class="button button-icon new-tab-button">📌</a>
                 </div>
                 <div class="form-block">
                     <select
